{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 3834,
  "lineage": "ac841384-32ac-2689-a804-14d89578b58f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route_table",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-09a47f62116bd72d8",
            "id": "rtb-09a47f62116bd72d8",
            "owner_id": "135928476890",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8b4c79881d8c061",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hamza-jason-Eng53-private-route-table"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_primary",
      "each": "list",
      "provider": "module.db.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05955f6f6abb0d8f8",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-03e398f1d77a9efc6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e398f1d77a9efc6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ChristopherRogers-Eng53-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a645db6baa422cec",
            "private_dns": "ip-10-0-10-100.eu-west-1.compute.internal",
            "private_ip": "10.0.10.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06d3c4b6c775e04ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048ee961f43f212c7",
            "tags": {
              "Name": "hamza-jason-Eng53-db_primary-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040cfe4d37f58da85"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_secondary-1",
      "provider": "module.db.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05955f6f6abb0d8f8",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0457d2ec9458782f2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0457d2ec9458782f2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ChristopherRogers-Eng53-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087cc3fa9ec25a7b3",
            "private_dns": "ip-10-0-11-100.eu-west-1.compute.internal",
            "private_ip": "10.0.11.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d41d9afff887863f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d30d9cffd00ad2e3",
            "tags": {
              "Name": "hamza-jason-Eng53-db_secondary-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040cfe4d37f58da85"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_secondary-2",
      "provider": "module.db.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05955f6f6abb0d8f8",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-054b60325488916c4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054b60325488916c4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ChristopherRogers-Eng53-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0538eb4af2e10b107",
            "private_dns": "ip-10-0-12-100.eu-west-1.compute.internal",
            "private_ip": "10.0.12.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cbcfd2204a460d05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f66d39c199c22323",
            "tags": {
              "Name": "hamza-jason-Eng53-db_secondary-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040cfe4d37f58da85"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elk",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elastic_search",
      "provider": "module.elk.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2212b3311c42a29",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-050cbb8947fc2c8b9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050cbb8947fc2c8b9",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02ee76fb00f8c4c34",
            "private_dns": "ip-10-0-13-100.eu-west-1.compute.internal",
            "private_ip": "10.0.13.100",
            "public_ip": "52.30.204.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-094d408d691f130e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e07246bfd60f816",
            "tags": {
              "Name": "hamza-jason-Eng53-elasticsearch"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9126f7fd169d73d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_k",
            "module.vpc.aws_subnet.public_subnet_elk",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elk",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kibana",
      "provider": "module.elk.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff0f7f795ad437c7",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0c3a0dfb3bc038cc6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3a0dfb3bc038cc6",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb3adb38a9ba4b8c",
            "private_dns": "ip-10-0-13-101.eu-west-1.compute.internal",
            "private_ip": "10.0.13.101",
            "public_ip": "34.246.177.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-001f3927ec52e0ea1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e07246bfd60f816",
            "tags": {
              "Name": "hamza-jason-Eng53-kibana"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9126f7fd169d73d"
            ]
          },
          "dependencies": [
            "module.elk.aws_instance.elastic_search",
            "module.vpc.aws_security_group.sg_k",
            "module.vpc.aws_subnet.public_subnet_elk",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elk",
      "mode": "managed",
      "type": "aws_instance",
      "name": "logstash",
      "provider": "module.elk.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0372c9486de525240",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0f6d59a39d5bb5a31",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6d59a39d5bb5a31",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0109437efc173c5be",
            "private_dns": "ip-10-0-13-102.eu-west-1.compute.internal",
            "private_ip": "10.0.13.102",
            "public_ip": "34.246.135.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084c8b39a52a4ce97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e07246bfd60f816",
            "tags": {
              "Name": "hamza-jason-Eng53-logstash"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9126f7fd169d73d"
            ]
          },
          "dependencies": [
            "module.elk.aws_instance.elastic_search",
            "module.elk.aws_instance.kibana",
            "module.vpc.aws_security_group.sg_k",
            "module.vpc.aws_subnet.public_subnet_elk",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f8b4c79881d8c061",
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-Eng53-igw"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "module.load_balancer.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/hamza-jason-eng53-lb/bdade1b2eeb5b613",
            "arn_suffix": "app/hamza-jason-eng53-lb/bdade1b2eeb5b613",
            "dns_name": "hamza-jason-eng53-lb-1923713106.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/hamza-jason-eng53-lb/bdade1b2eeb5b613",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hamza-jason-eng53-lb",
            "security_groups": [
              "sg-05f5d33edfa3d36f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05aec1ef8a5276e79"
              },
              {
                "subnet_id": "subnet-0b816be8ead58b375"
              },
              {
                "subnet_id": "subnet-0e1982a578b61f534"
              }
            ],
            "subnets": [
              "subnet-05aec1ef8a5276e79",
              "subnet-0b816be8ead58b375",
              "subnet-0e1982a578b61f534"
            ],
            "vpc_id": "vpc-0234feddd15739c36",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "module.load_balancer.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/app/hamza-jason-eng53-lb/bdade1b2eeb5b613/182447632183cbbc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/hamza-jason-eng53-tg1/e82ef6feeea17acd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/app/hamza-jason-eng53-lb/bdade1b2eeb5b613/182447632183cbbc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/hamza-jason-eng53-lb/bdade1b2eeb5b613",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.tg1",
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg1",
      "provider": "module.load_balancer.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/hamza-jason-eng53-tg1/e82ef6feeea17acd",
            "arn_suffix": "targetgroup/hamza-jason-eng53-tg1/e82ef6feeea17acd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/hamza-jason-eng53-tg1/e82ef6feeea17acd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hamza-jason-eng53-tg1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01b7d688ade2eaa93",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8b4c79881d8c061",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hamza-jason-Eng53-public-route-table"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048223f1e54a5610c",
            "route_table_id": "rtb-09a47f62116bd72d8",
            "subnet_id": "subnet-048ee961f43f212c7"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a6ee55cb980120",
            "route_table_id": "rtb-09a47f62116bd72d8",
            "subnet_id": "subnet-0d30d9cffd00ad2e3"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eda69c0442239484",
            "route_table_id": "rtb-09a47f62116bd72d8",
            "subnet_id": "subnet-0f66d39c199c22323"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090cda19d12b74c21",
            "route_table_id": "rtb-01b7d688ade2eaa93",
            "subnet_id": "subnet-0e1982a578b61f534"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3c42f588348ea6b",
            "route_table_id": "rtb-01b7d688ade2eaa93",
            "subnet_id": "subnet-05aec1ef8a5276e79"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f02a47ae0239f605",
            "route_table_id": "rtb-01b7d688ade2eaa93",
            "subnet_id": "subnet-0b816be8ead58b375"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_elk_assoc",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e9af8d779905c7a",
            "route_table_id": "rtb-01b7d688ade2eaa93",
            "subnet_id": "subnet-00e07246bfd60f816"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_elk",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "launch-config-asg-sg",
      "provider": "module.Autoscaling.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-080c91bbe906b3730",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-080c91bbe906b3730",
            "ingress": [],
            "name": "launch-config-asg-sg",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "module.load_balancer.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-05f5d33edfa3d36f1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05f5d33edfa3d36f1",
            "ingress": [],
            "name": "lb_sg",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_db",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-040cfe4d37f58da85",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-040cfe4d37f58da85",
            "ingress": [],
            "name": "hamza-jason-Eng53-sg-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_el",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-09723ea3195a16785",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09723ea3195a16785",
            "ingress": [],
            "name": "hamza-jason-Eng53-sg_el",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_k",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0d9126f7fd169d73d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d9126f7fd169d73d",
            "ingress": [],
            "name": "hamza-jason-Eng53-sg-k",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "module.Autoscaling.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-209554772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-080c91bbe906b3730",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.Autoscaling.aws_security_group.launch-config-asg-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "el__eph_outbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-652613047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09723ea3195a16785",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_el",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "el_eph_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-1324623575",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09723ea3195a16785",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_el",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "el_eph_outbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-2081650458",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09723ea3195a16785",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_el",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eph_inbound_http",
      "provider": "module.Autoscaling.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-2441245566",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-080c91bbe906b3730",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.Autoscaling.aws_security_group.launch-config-asg-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "module.load_balancer.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4253148549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05f5d33edfa3d36f1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "module.Autoscaling.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2971844907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-080c91bbe906b3730",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.Autoscaling.aws_security_group.launch-config-asg-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http_port",
      "provider": "module.Autoscaling.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1725380594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-080c91bbe906b3730",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "dependencies": [
            "module.Autoscaling.aws_security_group.launch-config-asg-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k_all_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "188.213.137.212/32"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-3468881516",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d9126f7fd169d73d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_k",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k_all_outbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "188.213.137.212/32"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-3653784412",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d9126f7fd169d73d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_k",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k_eph_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-471058237",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9126f7fd169d73d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_k",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k_eph_outbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-4077956009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9126f7fd169d73d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_k",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_all_outbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.7.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-2751557377",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 27017,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_all_outbound_access_1",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.8.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-1380524008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 27017,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_all_outbound_access_2",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.9.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-4097709148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 27017,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_outbound_access_kibana",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.13.0/24"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-4263975211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_outbound_access_primary",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.10.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-4150416709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 27017,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_outbound_access_secondary_1",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.11.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-1360355057",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 27017,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_outbound_access_secondary_2",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.12.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-1627210860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 27017,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongod_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 1024,
            "id": "sgrule-3876641097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cfe4d37f58da85",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "module.load_balancer.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3123075498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05f5d33edfa3d36f1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.lb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-048ee961f43f212c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-048ee961f43f212c7",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-private-subnet.1"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0d30d9cffd00ad2e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0d30d9cffd00ad2e3",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-private-subnet.2"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0f66d39c199c22323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0f66d39c199c22323",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-private-subnet.3"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0e1982a578b61f534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0e1982a578b61f534",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-public-subnet.1"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-05aec1ef8a5276e79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-05aec1ef8a5276e79",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-public-subnet.2"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b816be8ead58b375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-0b816be8ead58b375",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-public-subnet.3"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_elk",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-00e07246bfd60f816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-00e07246bfd60f816",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-public-subnet-elk.1"
            },
            "vpc_id": "vpc-0234feddd15739c36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0234feddd15739c36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05890c050df9452e3",
            "default_route_table_id": "rtb-09a47f62116bd72d8",
            "default_security_group_id": "sg-0a3b0e54637eb4161",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0234feddd15739c36",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a47f62116bd72d8",
            "owner_id": "135928476890",
            "tags": {
              "Name": "hamza-jason-Eng53-New-vpc"
            }
          }
        }
      ]
    }
  ]
}